--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 FRONTEND_URL='https://task-apps-client.vercel.app'
 MONGO_URL='mongodb+srv://rameesraja:123@cluster0.stl0v.mongodb.net/taskDB?retryWrites=true&w=majority&appName=Cluster0'
+PORT=5000
