--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-FRONTEND_URL='https://task-apps-client.vercel.app'
+FRONTEND_URL='http://localhost:5173'
 MONGO_URL='mongodb+srv://rameesraja:123@cluster0.stl0v.mongodb.net/taskDB?retryWrites=true&w=majority&appName=Cluster0'
