--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-FRONTEND_URL='https://task-app-plum-seven.vercel.app/'
+FRONTEND_URL='https://task-app-plum-seven.vercel.app'
 MONGO_URL='mongodb+srv://rameesraja:123@cluster0.stl0v.mongodb.net/taskDB?retryWrites=true&w=majority&appName=Cluster0'
